--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "aos": "^2.3.4",
+    "aos": "^3.0.0-beta.6",
     "daisyui": "^2.39.1",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
